cabal-version:      2.4
name:               haml
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Noah Brooks
maintainer:         noahebrooks@protonmail.ch

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md, README.md



executable haml
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
    default-language: Haskell2010

library
  build-depends:       base ^>=4.14.1.0
                     , containers >=0.6 && <0.7 
                     , mtl >= && <2.3
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  exposed-modules:     Relude
                     , Lexer
  hs-source-dirs:      src
